--- a/src/memberList/memberList.html
+++ b/src/memberList/memberList.html
@@ -68,7 +68,7 @@
 
             <div id="card-raka" class="flex flex-col shadow-xl rounded-lg p-5 hover:-translate-y-5 duration-300 h-72">
                 <label for="modal-raka">
-                    <img src="../../img/raka.png" alt="Edi" width="180" height="80" class="justify-center rounded-full mb-1">
+                    <img src="../../img/raka.png" alt="Edi" width="180" height="80" class="justify-center rounded-full mb-2 mt-8">
                     <div class="content-members text-center font-semibold text-xl">
                         <p id="p-raka">Raka Adi .W</p>
                     </div>
@@ -131,7 +131,7 @@
 
             <div id="card-arrashi" class="flex flex-col shadow-xl rounded-lg p-5  hover:-translate-y-5 duration-300 h-72">
                 <label for="modal-arrashi">
-                    <img src="../../img/arrashi.png" alt="Edi" width="180" height="200" class="mx-auto mt-6 rounded-full">
+                    <img src="../../img/arrashi.png" alt="Edi" width="160" height="200" class="mx-auto mt-8 rounded-full">
                     <div class="content-members text-center font-semibold text-xl">
                         <p id="p-niken">Arrashi .S</p>
                     </div>
@@ -140,25 +140,35 @@
 
             <div id="card-fira" class="flex flex-col shadow-xl rounded-lg p-5  hover:-translate-y-5 duration-300 h-72">
                 <label for="modal-fira">
-                    <img src="../../img/fira.png" alt="fira" width="180" height="200" class="mx-auto mt-6 rounded-full">
+                    <img src="../../img/fira.png" alt="fira" width="160" height="200" class="mx-auto mt-8 rounded-full">
                     <div class="content-members text-center font-semibold text-xl">
                         <p id="p-niken">Safira .M</p>
                     </div>
                 </label>
             </div>
+
             <div id="card-fata" class="flex flex-col shadow-xl rounded-lg p-5  hover:-translate-y-5 duration-300 h-72">
                 <label for="modal-fata">
-                    <img src="../../img/fata.png" alt="fira" width="180" height="200" class="mx-auto mt-6 rounded-full">
+                    <img src="../../img/fata.png" alt="fira" width="160" height="200" class="mx-auto mt-8 rounded-full">
                     <div class="content-members text-center font-semibold text-xl">
                         <p id="p-niken">Fata Alhaq</p>
                     </div>
                 </label>
             </div>
+
             <div id="card-syukri" class="flex flex-col shadow-xl rounded-lg p-5  hover:-translate-y-5 duration-300 h-72">
                 <label for="modal-syukri">
-                    <img src="../../img/syukri.png" alt="fira" width="180" height="200" class="mx-auto mt-6 rounded-full">
+                    <img src="../../img/syukri.png" alt="fira" width="160" height="200" class="mx-auto mt-8 rounded-full">
                     <div class="content-members text-center font-semibold text-xl">
                         <p id="p-niken">M. Syukri .R </p>
+                    </div>
+                </label>
+            </div>
+            <div id="card-chalila" class="flex flex-col shadow-xl rounded-lg p-5  hover:-translate-y-5 duration-300 h-72">
+                <label for="modal-chalila">
+                    <img src="../../img/chalila.png" alt="fira" width="160" height="200" class="mx-auto mt-2 rounded-full">
+                    <div class="content-members text-center font-semibold text-xl">
+                        <p id="p-chalila">Chalila .K</p>
                     </div>
                 </label>
             </div>
@@ -173,7 +183,7 @@
                 <div class="modal-box relative bg-gradient-to-b from-fuchsia-500 to-pink-400">
                     <label for="modal-edi" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
                     <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
-                    <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
+                    <p class="py-4">"menuju tak terbatas dan melampauinya" <br> -buzz Lightyear- </p>
                 </div>
             </div>
 
@@ -191,7 +201,7 @@
                 <div class="modal-box relative bg-gradient-to-b from-fuchsia-600 to-pink-400">
                     <label for="modal-raka" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
                     <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
-                    <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
+                    <p class="py-4">It takes a process to face the future...</p>
                 </div>
             </div>
             
@@ -287,6 +297,27 @@
         </div>
     </div>
 
+    <footer class="footer footer-center p-10 bg-white translate-y-full border-t-2">
+        <div>
+            <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="inline-block fill-current">
+                <path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+                </path>
+            </svg>
+            <p class="font-bold">
+                1DC02 <br>
+                Teknik Komputer
+            </p> 
+            <p>Copyright © 2022 - All right reserved</p>
+        </div> 
+        <div>
+        <div class="grid grid-flow-col gap-4">
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a> 
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a> 
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+            </div>
+        </div>
+    </footer>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
     <script src="./memberList.js"></script>
